logs/owlcat.log
Listing '.'...
Listing './Owlcat'...
Listing './Owlcat/bin'...
Listing './bin'...
Compiling './bin/downweigh-redundant-baselines.py'...
***   File "./bin/downweigh-redundant-baselines.py", line 121
    print "%d baselines"%len(IFRS);
                       ^
SyntaxError: invalid syntax

Compiling './bin/export-ms-column.py'...
***   File "./bin/export-ms-column.py", line 39
    print "%s: %s"%(os.path.basename(sys.argv[0]),message);
                 ^
SyntaxError: invalid syntax

Compiling './bin/fitstool.py'...
Compiling './bin/fix-ms-storagemanagers.py'...
***   File "./bin/fix-ms-storagemanagers.py", line 56
    print "%s process killed by signal %d"%(command,sig);
                                         ^
SyntaxError: invalid syntax

Compiling './bin/flag-ms.py'...
***   File "./bin/flag-ms.py", line 66
    print "  ===> DATA_DESC_ID:",subset['ddid'];
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/merge-ms.py'...
***   File "./bin/merge-ms.py", line 75
    print "Output MS",msout,"already exists. Use the -f switch to overwrite.";
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/plot-de-solutions.py'...
***   File "./bin/plot-de-solutions.py", line 167
    print "Using MS %s for coordinates information"%msname;
                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/plot-ms.py'...
***   File "./bin/plot-ms.py", line 217
    print "Available plot types:\n"
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/plot-parms.py'...
***   File "./bin/plot-parms.py", line 77
    raise TypeError,"incorrect number of arguments in call to _matrix22";
                   ^
SyntaxError: invalid syntax

Compiling './bin/plot-pointing-errors.py'...
***   File "./bin/plot-pointing-errors.py", line 106
    print "%d timeslots found in table %s"%(NTIMES,args[0]);
                                         ^
SyntaxError: invalid syntax

Compiling './bin/split-ms-spw.py'...
***   File "./bin/split-ms-spw.py", line 60
    print "Reading input MS %s"%msname;
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Owlcat'...
Compiling './lib/python3.5/site-packages/Owlcat/FitsTool.py'...
***   File "./lib/python3.5/site-packages/Owlcat/FitsTool.py", line 349
    print "======== FITS header for",filename;
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Owlcat/Flagger.py'...
***   File "./lib/python3.5/site-packages/Owlcat/Flagger.py", line 37
    raise TypeError,"invalid value for '%s' keyword (%s)"%(argname,bins);
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Owlcat/FunkOps.py'...
***   File "./lib/python3.5/site-packages/Owlcat/FunkOps.py", line 43
    raise TypeError,"linear interpolation only available for rank-1 slices";
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Owlcat/Gainplots.py'...
***   File "./lib/python3.5/site-packages/Owlcat/Gainplots.py", line 215
    print "applying subset '%s' to sources"%src, srcnames;
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Owlcat/ParmTables.py'...
***   File "./lib/python3.5/site-packages/Owlcat/ParmTables.py", line 131
    raise IndexError,"invalid coeff index %s (funklet is scalar)"%coeff;
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Owlcat/Parsing.py'...
***   File "./lib/python3.5/site-packages/Owlcat/Parsing.py", line 14
    raise ValueError,"invalid slice specification %s"%spec;
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Owlcat/Plotting.py'...
***   File "./lib/python3.5/site-packages/Owlcat/Plotting.py", line 144
    print "Error plotting data for",key;
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Owlcat/Tables.py'...
***   File "./lib/python3.5/site-packages/Owlcat/Tables.py", line 44
    print "  %s: %d chunk(s)%s%s"%(colname,len(rng),
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Owlcat/__init__.py'...
***   File "./lib/python3.5/site-packages/Owlcat/__init__.py", line 42
    print "Failed to import pyrap_tables or pyrap.tables. Please install the pyrap "
                                                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/owlcat-1.4.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
